# skbuild-template

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
include/: functions.h
include/cpp_lib/: implementation.h
interface/cpp/: CMakeLists.txt  main.cpp
interface/python/: CMakeLists.txt  python_interface.cpp
src/: CMakeLists.txt  functions.cpp  implementation.cpp
src/skbuild_template/: __init__.py
tests/python/: test.py
