[build-system]
requires = [
    "scikit-build-core>=0.4.7",
    "pybind11"
]
build-backend = "scikit_build_core.build"


[project]
name = "skbuild_template"
version = "0.1.0"
description="A template for building a Python package with scikit-build-core based on a C++ project using CMake."
readme = "README.md"
authors = [
    { name = "Roland Stolz", email = "roland.stolz9@gmail.com" },
]
requires-python = ">=3.8"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = [
    "-DBUILD_CPP_INTERFACE=OFF",
    "-DBUILD_PYTHON_INTERFACE=ON",
    "-DBUILD_TESTS=ON",
]